[workspace]
members = ["registry", "rpc", "rest", "ecode", "tracing", "data"]

[workspace.package]
version = "1.0.0"
authors = ["go-bamboo"]
repository = "https://github.com/go-bamboo/layout-rs.git"
license = "MIT License"
edition = "2021"

[workspace.dependencies]

# tokio
tokio = { version = "1.29.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync", "net"] }
tokio-graceful = "0.1.6"
async-trait = "0.1.77"
chrono = { version = "0.4.38", features = ["serde"] }

# serde
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96" }

# protobuf
prost = "0.12.3"

# config
config = { git = "https://github.com/go-bamboo/config-rs.git" }
#config = { path = "../config-rs" }

# log
log = "0.4.14"

# grpc
hyper = { version = "0.14.15", features = ["full"] }
hyper-tls = { version = "0.5.0" }
tonic = { version = "0.10.2" }
tonic-health = { version = "0.10.2" }

# http
axum = { version = "0.6.20" }

# tower
tower = { version = "0.4.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }

# ta
polars = "0.36.2"
ta = "0.5.0"

# db
redis = { version = "0.24.0", features = ["tokio-comp"] }
sea-orm = { version = "0.12.9", features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-mysql",
] }
clickhouse-rs = { git = "https://github.com/suharev7/clickhouse-rs" }

# decimal
rust_decimal = { version = "1.30", features = ["serde", "serde-str"] }
rust_decimal_macros = "1.30"

# lib
api = { git = "https://github.com/go-bamboo/api.git" }
# api = { path = "../api" }
ecode = { path = "./ecode" }
rest = { path = "./rest" }
rpc = { path = "./rpc" }
data = { path = "./data" }




