[package]
name = "rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
tokio-graceful = { workspace = true }
async-trait = { workspace = true }

# serde
serde = { workspace = true }
serde_json = { workspace = true }

# log
log = { workspace = true }

# tower
tower = { workspace = true }
tower-http = { workspace = true }

# http
axum = { workspace = true }

# error
ecode = { workspace = true }

# api
api = { workspace = true }

# registry
#registry = {path = "./registry"}

