[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-graceful = { workspace = true }

# serde
serde = { workspace = true }
serde_json = { workspace = true }

# log
log = { workspace = true }

# grpc
hyper = { workspace=true }
hyper-tls = { workspace=true }
tonic = { workspace=true }
tonic-health = { workspace=true }

# tower
tower = { version = "0.4.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }

# error
ecode = { workspace = true }

# api
api = { workspace = true }